@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="29"
-      android:versionName="29"
+      android:versionCode="30"
+      android:versionName="30"
       android:installLocation="preferExternal">
       
     <!-- android:targetSdkVersion 11 to hide the legacy menu button on tablets -->
